fix(dropdown-option): mac chrome visibility issue (#42)

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -131,14 +131,12 @@
   transition: transform 150ms ease-out, opacity 150ms ease-out,
     outline-color 150ms ease-out;
   visibility: hidden;
-  height: 0;
   transform: translateY(-10px);
   opacity: 0;
   z-index: -1;
 
   &.open {
     visibility: visible;
-    height: auto;
     transform: translateY(0);
     opacity: 1;
     z-index: 2;
